--- a/Frontend/All_Handbags.html
+++ b/Frontend/All_Handbags.html
@@ -13,7 +13,7 @@
       position: absolute;
       top: 10px;
       left: 10px;
-      background: red;
+      background:linear-gradient(90deg, #ff4d6d, #ffb347);
       color: white;
       padding: 5px 10px;
       font-weight: bold;
@@ -38,8 +38,8 @@
       width: 100%;
       padding: 20px;
       text-align: center;
-      background: #222;
-      color: #fff;
+      background:white;
+      color:black;
       margin-top: 50px;
     }
         /* Bigger text on desktop */
@@ -62,9 +62,7 @@
   </nav>
 </header>
 
-<div class="pink-banner">
-  <div class="scrolling-text">THE LADY WHO LEADS</div>
-</div>
+<div id="bannerText">THE LADY WHO LEADS</div>
 
 <main class="bag-section">
   <h2>ALL HANDBAGS</h2>
@@ -213,6 +211,18 @@ document.addEventListener("DOMContentLoaded", () => {
   });
 });
 </script>
+<script>
+window.addEventListener("scroll", function() {
+  const text = document.getElementById("bannerText");
+  if (window.scrollY > 100) {
+    text.classList.add("hide");
+  } else {
+    text.classList.remove("hide");
+  }
+});
+
+</script>
+
 
 
 <footer class="site-footer">
