--- a/Frontend/Pie_Bags.html
+++ b/Frontend/Pie_Bags.html
@@ -13,7 +13,7 @@
       position: absolute;
       top: 10px;
       left: 10px;
-      background:linear-gradient(90deg, #ff4d6d, #ffb347);;
+      background:linear-gradient(90deg, #ff4d6d, #ffb347);
       color: white;
       padding: 5px 10px;
       font-weight:700;
