--- a/Frontend/Clutches.html
+++ b/Frontend/Clutches.html
@@ -13,7 +13,7 @@
       position: absolute;
       top: 10px;
       left: 10px;
-      background: red;
+      background:linear-gradient(90deg, #ff4d6d, #ffb347);
       color: white;
       padding: 5px 10px;
       font-weight: bold;
@@ -38,8 +38,8 @@
       width: 100%;
       padding: 20px;
       text-align: center;
-      background: #222;
-      color: #fff;
+      background: white;
+      color:black;
       margin-top: 990px;
     }
         /* Bigger text on desktop */
@@ -63,10 +63,7 @@
   </nav>
 </header>
 
-<div class="pink-banner">
-  <div class="scrolling-text">THE LADY WHO LEADS</div>
-</div>
-
+<div id="bannerText">THE LADY WHO LEADS</div>
 <main class="bag-section">
   <h2>CLUTCHES</h2>
 
@@ -97,12 +94,12 @@
       <div class="wishlist-btn"><i class="material-icons">favorite_border</i></div>
       <div class="container">
         <div class="top">
-          <a href="productdetails.html"><img src="IMG_6726.PNG" alt="Clutch 1" /></a>
+          <a href="productdetails.html"><img src="clutch.png.jpg" alt="Clutch 1" /></a>
         </div>
         <div class="bottom">
           <div class="left">
             <div class="details">
-              <h1>Clutch 1</h1>
+              <h1>White Pearl Purse</h1>
               <p class="discounted-price">₹1350</p>
               <p class="mrp">MRP: <span>₹2500</span></p>
             </div>
@@ -113,13 +110,13 @@
       </div>
     </div>
 
-    <!-- Clutch Product 2 -->
+    <!-- Clutch Product 2 
     <div class="wrapper" data-product-id="clutch002" data-sold-out="true">
       <div class="sold-out-badge">SOLD OUT</div>
       <div class="wishlist-btn"><i class="material-icons">favorite_border</i></div>
       <div class="container">
         <div class="top">
-          <a href="productdetails.html"><img src="IMG_6726.PNG" alt="Clutch 2" /></a>
+          <a href="productdetails.html"><img src="clutch.png.jpg" alt="Clutch 2" /></a>
         </div>
         <div class="bottom">
           <div class="left">
@@ -133,7 +130,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div>-->
 
   </div>
 </main>
@@ -301,6 +298,17 @@ document.addEventListener("DOMContentLoaded", () => {
   localStorage.setItem("allProducts", JSON.stringify(allProducts));
 });
 </script>
+<script>
+window.addEventListener("scroll", function() {
+  const text = document.getElementById("bannerText");
+  if (window.scrollY > 100) {
+    text.classList.add("hide");
+  } else {
+    text.classList.remove("hide");
+  }
+});
+</script>
+
 
 <footer class="site-footer">
   <p>© 2025 V Lady. All rights reserved.</p>
